src/test/deca/context/invalid/langage_essentiel/premiere_passe/regle_1_3_1.deca
class A extends B  {
}
// raison : opération partielle env _types(super )
//        	message : “identificateur non déclaré”
